opam-version: "2.0"
version: "1.45"
license: "GPL"
maintainer: "Kate <kit.ty.kate@disroot.org>"
authors: "The RLDEV authors"
homepage: "https://github.com/kit-ty-kate/rldev"
dev-repo: "git://github.com/kit-ty-kate/rldev.git"
bug-reports: "https://github.com/kit-ty-kate/rldev/issues"
synopsis: "An unofficial development toolkit for AVG2000 and RealLive"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.02"}
  "dune" {build & >= "1.9"}
  "extlib" {>= "1.4"}
  "ulex"
  "xml-light"
  "conf-libpng"
  "camlp4"
]
