(install
  (section share)
  (files
    (compat.kh as lib/compat.kh)
    (cp936.dat as lib/cp936.dat)
    (game.cfg as lib/game.cfg)
    (reallive.kfn as lib/reallive.kfn)
    (rlBabel.kh as lib/rlBabel.kh)
    (rlplugin.def as lib/rlplugin.def)
    (rlplugin.h as lib/rlplugin.h)
    (textout.kh as lib/textout.kh)
    (vas_gan.dtd as lib/vas_gan.dtd)
    (cp932.dat as lib/cp932.dat)
    (cp949.dat as lib/cp949.dat)
    (reallive141.kfn as lib/reallive141.kfn)
    (rlapi.kh as lib/rlapi.kh)
    (rldev.cfg as lib/rldev.cfg)
    (rlpluginf.def as lib/rlpluginf.def)
    (system.kh as lib/system.kh)
    (vas_g00.dtd as lib/vas_g00.dtd)))
