(install
  (section share)
  (files
    (1.2.3.5.map as rtl/1.2.3.5.map)
    (1.2.5.5.map as rtl/1.2.5.5.map)
    (1.2.6.4.map as rtl/1.2.6.4.map)
    (1.2.6.6.map as rtl/1.2.6.6.map)
    (1.2.6.8.map as rtl/1.2.6.8.map)
    (1.2.7.0.map as rtl/1.2.7.0.map)
    (1.2.8.7.map as rtl/1.2.8.7.map)
    (1.2.8.9.map as rtl/1.2.8.9.map)
    (1.2.9.3.map as rtl/1.2.9.3.map)
    (1.2.9.4.map as rtl/1.2.9.4.map)
    (1.2.9.5.map as rtl/1.2.9.5.map)
    (1.3.1.0.map as rtl/1.3.1.0.map)
    (1.3.1.2.map as rtl/1.3.1.2.map)
    (1.3.1.7.map as rtl/1.3.1.7.map)
    (1.3.2.0.map as rtl/1.3.2.0.map)
    (1.3.2.7.map as rtl/1.3.2.7.map)
    (1.3.4.1.map as rtl/1.3.4.1.map)
    (1.3.4.8.map as rtl/1.3.4.8.map)
    (1.3.5.4.map as rtl/1.3.5.4.map)
    (1.3.5.7.map as rtl/1.3.5.7.map)
    (1.3.8.6.map as rtl/1.3.8.6.map)
    (1.3.9.2.map as rtl/1.3.9.2.map)
    (1.3.9.5.map as rtl/1.3.9.5.map)
    (1.4.0.1.map as rtl/1.4.0.1.map)
    (1.4.0.5.map as rtl/1.4.0.5.map)
    (rlBabel.dll as rtl/rlBabel.dll)
    (rlBabelF.dll as rtl/rlBabelF.dll)))
