(ocamllex gameLexer kfnLexer castLexer)
(ocamlyacc gameParser kfnParser castParser)

(rule
  (targets config_gen.ml)
  (deps ../config.ml)
  (action
    (with-stdout-to %{targets} (run ocaml %{deps} %{version:rldev}))))

(library
  (name optpp)
  (wrapped false)
  (modules optpp)
  (libraries extlib))

(library
  (name rlprims)
  (wrapped false)
  (cxx_names lz_comp_rl)
  (c_names binarray-c get_interpreter_version)
  (c_library_flags -lstdc++)
  (modules))

(library
  (name rlcmp)
  (wrapped false)
  (modules binarray metadata bytecode game gameTypes gameParser gameLexer rlcmp)
  (libraries optpp appconfig unix bigarray rlprims))

(library
  (name rlkfn)
  (wrapped false)
  (modules kfnTypes kfnParser kfnLexer)
  (libraries extlib))

(library
  (name cast)
  (wrapped false)
  (modules cast castParser castLexer)
  (libraries optpp))

(library
  (name appconfig)
  (wrapped false)
  (modules avlTree iSet iMap encoding config_gen config cp932 cp936 cp949 text textTransforms)
  (libraries optpp cast))

(executable
  (name mkdatamain)
  (modules cp932_in cp936_in cp949_in mkdatamain)
  (libraries appconfig))
