(library
  (name vcprims)
  (cxx_names g00-bt pdt-bt)
  (c_names image-bt png-interface)
  (c_flags (:include c_flags.sexp) (-I ../common -fPIC))
  (cxx_flags (-I ../common -fPIC))
  (c_library_flags (:include c_library_flags.sexp))
  (modules))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps (:discover ../discover.exe))
 (action (run %{discover})))

(executable
  (name main)
  (public_name vaconv)
  (libraries xml-light optpp appconfig bigarray vcprims))
